--- a/77_Data_Viz_Annotate.ipynb
+++ b/77_Data_Viz_Annotate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHMdSd8r7KNYna3p/KpU2j",
+      "authorship_tag": "ABX9TyMDpl+YTO+fdY3SZ91wnyL3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "eo5LsSJiWNqP"
       },
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "h0DkDxcDW0mt"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "csHJqYdsW9RP"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
         "id": "OocHtzPeW_0X",
         "outputId": "6f1e6a46-8230-4b90-f463-4cdd40fac51e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -157,7 +157,7 @@
       "metadata": {
         "id": "3pgvGnd8XFgH"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
       "metadata": {
         "id": "oetfEMUNXJi0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +267,7 @@
         "id": "aJg1LDgIXMjl",
         "outputId": "7e1950d7-31b8-4f5e-d443-afadf6b95cea"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -300,6 +300,34 @@
       ],
       "metadata": {
         "id": "dabSJOzWXeOt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Extra 2: Caminhos Para Continuar Se Aprimorando\n",
+        "O caminho para continuar se aprimorando é continuar praticando. Se desafie a conhecer novas abordagens, novas bibliotecas, tentar novos plots, tentar refazer plots antigos com conhecimentos novos. Também é importante ter boas referências, e tentar seguir e reproduzir as visualizações dessas referências. Uma imagem vale mais que mil palavras, e visualizações impactantes irão elevar seus projetos e sua carreira para o próximo nível!\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "Documentação Oficial Matplotlib\n",
+        "\n",
+        "Documentação Oficial do Seaborn\n",
+        "\n",
+        "Documentação Oficial do Plotly\n",
+        "\n",
+        "Plotly Chart Studio\n",
+        "\n",
+        "Documentação Oficial Bokeh\n",
+        "\n",
+        "Documentação Oficial Altair\n",
+        "\n",
+        "Documentação Oficial SweetViz\n",
+        "\n",
+        "Dark Horse Analytics"
+      ],
+      "metadata": {
+        "id": "C5nI0r9UiWNW"
       }
     }
   ]
