--- a/77_Data_Viz_Annotate.ipynb
+++ b/77_Data_Viz_Annotate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDpl+YTO+fdY3SZ91wnyL3",
+      "authorship_tag": "ABX9TyPQeRNc4NgVZxZjYx5bpet7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -305,7 +305,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Extra 2: Caminhos Para Continuar Se Aprimorando\n",
+        "## **Extra 2: Caminhos Para Continuar Se Aprimorando**\n",
+        "\n",
         "O caminho para continuar se aprimorando é continuar praticando. Se desafie a conhecer novas abordagens, novas bibliotecas, tentar novos plots, tentar refazer plots antigos com conhecimentos novos. Também é importante ter boas referências, e tentar seguir e reproduzir as visualizações dessas referências. Uma imagem vale mais que mil palavras, e visualizações impactantes irão elevar seus projetos e sua carreira para o próximo nível!\n",
         "\n",
         "Links úteis:\n",
