--- a/77_Data_Viz_Annotate.ipynb
+++ b/77_Data_Viz_Annotate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQeRNc4NgVZxZjYx5bpet7",
+      "authorship_tag": "ABX9TyP44pt4u2Q1sr35exeR39b+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -311,13 +311,13 @@
         "\n",
         "Links úteis:\n",
         "\n",
-        "Documentação Oficial Matplotlib\n",
+        "[Documentação Oficial Matplotlib](https://matplotlib.org/stable/index.html)\n",
         "\n",
-        "Documentação Oficial do Seaborn\n",
+        "[Documentação Oficial do Seaborn](https://seaborn.pydata.org/)\n",
         "\n",
-        "Documentação Oficial do Plotly\n",
+        "[Documentação Oficial do Plotly](https://plotly.com/)\n",
         "\n",
-        "Plotly Chart Studio\n",
+        "[Plotly Chart Studio](https://plotly.com/)\n",
         "\n",
         "Documentação Oficial Bokeh\n",
         "\n",
