--- a/77_Data_Viz_Annotate.ipynb
+++ b/77_Data_Viz_Annotate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP44pt4u2Q1sr35exeR39b+",
+      "authorship_tag": "ABX9TyM6RF3dBSZgQxTc8afeg/2q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -319,11 +319,11 @@
         "\n",
         "[Plotly Chart Studio](https://plotly.com/)\n",
         "\n",
-        "Documentação Oficial Bokeh\n",
+        "[Documentação Oficial Bokeh](https://docs.bokeh.org/en/latest/index.html)\n",
         "\n",
-        "Documentação Oficial Altair\n",
+        "[Documentação Oficial Altair](https://altair-viz.github.io/)\n",
         "\n",
-        "Documentação Oficial SweetViz\n",
+        "[Documentação Oficial SweetViz](https://pypi.org/project/sweetviz/)\n",
         "\n",
         "Dark Horse Analytics"
       ],
