--- a/77_Data_Viz_Annotate.ipynb
+++ b/77_Data_Viz_Annotate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6RF3dBSZgQxTc8afeg/2q",
+      "authorship_tag": "ABX9TyMQYRXk4UgWtPmZVTLe+8VI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -325,10 +325,30 @@
         "\n",
         "[Documentação Oficial SweetViz](https://pypi.org/project/sweetviz/)\n",
         "\n",
-        "Dark Horse Analytics"
+        "[Dark Horse Analytics](https://www.darkhorseanalytics.com/)"
       ],
       "metadata": {
         "id": "C5nI0r9UiWNW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Parabéns!\n",
+        "\n",
+        "Parabéns!!!\n",
+        "Se você chegou até aqui, significa que você terminou este curso. Mas terminar este curso não significa ter apenas assistido as aulas.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Para ter realmente FEITO este curso você precisa ter colocado a mão na massa, ter melhorado significativamente as suas habilidades de visualização de dados, não só de um ponto de vista técnico, através de código, mas também de mindset, aplicando aos seus projetos e visualizações conceitos de Storytelling.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Se você realmente consumiu todo o material, botou em prática, leu os materiais extras, parabéns!!! Você está realmente comprometido com seu desenvolvimento e está no caminho para se tornar um grande Cientista de Dados, tornando sua concorrência irrelevante."
+      ],
+      "metadata": {
+        "id": "FSNVAqxBkCRp"
       }
     }
   ]
