--- a/77_Data_Viz_Annotate.ipynb
+++ b/77_Data_Viz_Annotate.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQYRXk4UgWtPmZVTLe+8VI",
+      "authorship_tag": "ABX9TyOK+mdh1vVrEz0YJNlZdfuL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -334,7 +334,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Parabéns!\n",
+        "## **Extra 3 : Parabéns**\n",
         "\n",
         "Parabéns!!!\n",
         "Se você chegou até aqui, significa que você terminou este curso. Mas terminar este curso não significa ter apenas assistido as aulas.\n",
