--- a/78_Introdução_ao_SQL.ipynb
+++ b/78_Introdução_ao_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxl9zFlwL2l9J8nUMiUrNm",
+      "authorship_tag": "ABX9TyMJem5aKOEQkYJQw6vOrJLN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -246,6 +246,131 @@
       ],
       "metadata": {
         "id": "KEKKq0vK1G9J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Statements\n",
+        "\n",
+        "Nós utilizamos a linguagem SQL para interagir com bancos de dados através do que chamamos de *statements*, ou sentenças.\n",
+        "\n",
+        "Aqui, vamos olhar os tipos de *statements* que podemos utilizar.\n",
+        "\n",
+        "<p align=center><img src=\"https://images.unsplash.com/photo-1554306274-f23873d9a26c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3150&q=80\" width=\"70%\"></p>\n",
+        "\n",
+        "\n",
+        "### Tipos de SQL Statements\n",
+        "\n",
+        "Abaixo, vemos um resumo de statements SQL divididos nas seguintes categorias:\n",
+        "\n",
+        "* Data Definition Language (DDL) Statements\n",
+        "* Data Manipulation Language (DML) Statements\n",
+        "* Transaction Control Statements\n",
+        "* Session Control Statements\n",
+        "* System Control Statement\n",
+        "* Embedded SQL Statements\n",
+        "* Data Definition Language (DDL) Statements\n",
+        "\n",
+        "\n",
+        "Com esses tipos de Statements em mente, podemos analisar cada um deles, e suas funções\n",
+        "\n",
+        "### Data Definition Language\n",
+        "\n",
+        "Os statements dessa categoria são utilizados para:\n",
+        "\n",
+        "* Criar, alterar e remover objetos do tipo esquema (*schema*)\n",
+        "* Conceder e revogar privilégios e papéis para colaboradores\n",
+        "* Analisar informações de tabelas, índices ou clusters\n",
+        "* Estabalecer opções para auditoria\n",
+        "* Adicionar comentários aos dicionários de dados\n",
+        "\n",
+        "Os comandos `CREATE`, `ALTER` e `DROP` requerem acesso exclusivo ao objeto alvo. Por exemplo, um statement `ALTER_TABLE` irá falhar caso outro usuário esteja com aquela tabela específica aberta no momento.\n",
+        "\n",
+        "Os comandos `GRANT`, `REVOKE`, `ANALYZE`, `AUDIT`, e `COMMENT` não requerem acesso exclusivo ao alvo. Por exemplo, é possível analizar uma tabela enquanto outros usuários a atualizam.\n",
+        "\n",
+        "\n",
+        "`ALTER` ... (All statements beginning with ALTER)\n",
+        "\n",
+        "`ANALYZE`\n",
+        "\n",
+        "`ASSOCIATE STATISTICS`\n",
+        "\n",
+        "`AUDIT`\n",
+        "\n",
+        "`COMMENT`\n",
+        "\n",
+        "`CREATE` ... (All statements beginning with CREATE)\n",
+        "\n",
+        "`DISASSOCIATE STATISTICS`\n",
+        "\n",
+        "`DROP` ... (All statements beginning with DROP)\n",
+        "\n",
+        "`FLASHBACK` ... (All statements beginning with FLASHBACK)\n",
+        "\n",
+        "`GRANT`\n",
+        "\n",
+        "`NOAUDIT`\n",
+        "\n",
+        "`PURGE`\n",
+        "\n",
+        "`RENAME`\n",
+        "\n",
+        "`REVOKE`\n",
+        "\n",
+        "`TRUNCATE`\n",
+        "\n",
+        "## Data Manipulation Language (DML) Statements\n",
+        "\n",
+        "Statements do tipo Data Manipulation Language acessam e manipulam os dados nos objetos do *schema* existente. Esses statements são:\n",
+        "\n",
+        "`CALL`\n",
+        "\n",
+        "`DELETE`\n",
+        "\n",
+        "`EXPLAIN PLAN`\n",
+        "\n",
+        "`INSERT`\n",
+        "\n",
+        "`LOCK TABLE`\n",
+        "\n",
+        "`MERGE`\n",
+        "\n",
+        "`SELECT`\n",
+        "\n",
+        "`UPDATE`\n",
+        "\n",
+        "O *statement* `SELECT` é uma forma limitada de DML, pois ele só consegue acessar dados no banco de dados. Ele não pode manipular os dados no banco de dados, apesar de poder operar nos dados acessados antes de retornar resultados na *query*.\n",
+        "\n",
+        "## Transaction Control Statements\n",
+        "Transaction Control Statements gerenciam mudanças feitas pelos *statements* DML. Eles são:\n",
+        "\n",
+        "`COMMIT`\n",
+        "\n",
+        "`ROLLBACK`\n",
+        "\n",
+        "`SAVEPOINT`\n",
+        "\n",
+        "`SET TRANSACTION`"
+      ],
+      "metadata": {
+        "id": "5-_8jOxy1Tdx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Cheat Sheet\n",
+        "\n",
+        "É muita coisa e nós sabemos. Lembrar de tudo isso de cara é tarefa difícil, e precisamos entender como usar cada um desses tipos de statements individualmente. I\u0010sso é o que faremos quando chegarmos à nossa parte mais prática desse curso.\n",
+        "\n",
+        "<p align=center><img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSLC_5u1i2wwUA_qp0tHRk6k8cIXrytlwO5pA&usqp=CAU\" width=\"60%\"></p>\n",
+        "\n",
+        "\n",
+        "Por enquanto, vamos deixar vocês com esse [Cheat Sheet](https://www.dataquest.io/blog/sql-cheat-sheet/) de SQL para Data Science, onde você consegue ter uma referência, com exemplos práticos, em código, de *statements* SQL."
+      ],
+      "metadata": {
+        "id": "2ne6iBnx1XXa"
       }
     },
     {
